<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape_gallery"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/gallery"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/btnCartoonize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnCartoonize" />

    <Button
        android:id="@+id/btnCartoonize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttonshape_gallery"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/apply"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape_gallery"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/rotate"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCartoonize"
        app:layout_constraintTop_toTopOf="@+id/btnCartoonize" />

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tvEdge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/sbAbstraction"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@+id/tvShadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvAbstraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abstraction_0"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/sbAbstraction"
        app:layout_constraintStart_toStartOf="@+id/sbAbstraction" />

    <SeekBar
        android:id="@+id/sbShadow"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCartoonize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvShadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shadow_0"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/sbShadow"
        app:layout_constraintStart_toStartOf="@+id/sbShadow" />

    <SeekBar
        android:id="@+id/sbEdge"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@+id/tvAbstraction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvEdge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edge"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/sbEdge"
        app:layout_constraintStart_toStartOf="@+id/sbShadow" />

</androidx.constraintlayout.widget.ConstraintLayout>